--- a/src/layouts/websiteLayout.astro
+++ b/src/layouts/websiteLayout.astro
@@ -35,7 +35,7 @@ const {
   </head>
   <body>
     <Navbar />
-    <main>
+    <main class="pt-8">
       <slot />
     </main>
     <FooterSection />
