--- a/src/pages/cart/index.astro
+++ b/src/pages/cart/index.astro
@@ -15,7 +15,7 @@ const formatPrice = (price: number): string => {
 ---
 
 <WebsiteLayout title="Carrito de Compras">
-  <div class="bg-background py-24">
+  <div class="bg-background">
     <!-- Breadcrumb -->
     <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
       <nav class="mb-8" aria-label="Breadcrumb">
